--- a/templates/a_hotels/a_hotels.html
+++ b/templates/a_hotels/a_hotels.html
@@ -171,7 +171,7 @@
        </div>    
 <br><br><br><br>
 <footer class="text-center text-light-grey p-32" style="background-color: rgb(218, 216, 216); width: 100%; height: 80px;padding: 30px;">
-  <p>Powered by <a href="#" target="_blank" class="hover-text-dark">ThemeHub.com</a></p>
+  <p>Powered by <a href="#" target="_blank" class="hover-text-dark">ThemeHub</a></p>
 </footer>
   </body>
 </html>
